overflow bug fixed - textbox

--- a/styleguide.css
+++ b/styleguide.css
@@ -168,7 +168,7 @@
     font-family: lucida console, courier new, courier, monospace;
     margin: 0;
     padding: 10px 0;
-    height: 71vh;
+    height: 530px;
     border-radius: 0;
     resize: none;
     font-size: 16px;
